fincalc/static/style.css
/* Reset*/
*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: manual;

}
/* Global Styles */
body {

    background-image: linear-gradient( hsl(28, 9%, 72%), #f9f8f7);
    padding-top: 8rem;
    padding-bottom: 30rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: center;
    line-height: 0.25 rem;
}

 header, main, .flash, nav ul, .hero, .mobileButtonDiv, footer p {

    max-width: 80%;
    margin: 0.5rem auto 0.5rem auto;

}

main {
    margin-bottom: 5rem;
}

.homeMain{
    margin-top: 2rem;
}


 p {
    line-height: 1.5;
    font-weight: 400;
    margin-bottom: 0.5rem;
}

.sectionBG{
    background-color: #f5f5f5aa;
    box-shadow: 10px 5px 5px #a5aeb6 ;
    padding: 1rem;
    border-radius: 1rem;
    transition: transform .2s;
}

.sectionBG:hover {
    transform: scale(1.01);
}

.images {
   box-shadow: 10px 5px 5px #a5aeb6 ;
    border-radius: 1rem;
}
.heroP {
    margin: 1rem 0rem 1rem 0rem;
    font-weight: 500;
}


h1, h2, h3 {
    line-height: 0.9;

    color:#3a3938;
    margin-bottom: 0.75rem;
}
.mainPageSections {
    padding: 0.5 rem 0rem 0.5rem 0rem;
    margin-bottom: 1.5rem;
}

.headerText, img {
    margin-top: 2rem;
    margin-bottom: 1rem;
}

 .homeButtons {

        display: flex;
        justify-content:  center;
        align-items: center;
        gap: 2rem;
        margin-top: 4rem;

    }

.homeButtonsStyle, .calcButtonStyle {
    background-color:#2e2c2b;
    transition: transform .2s;
    color: white;
    font-weight: 700;
    padding: 1rem;
    border-radius: 160rem;
    box-shadow: 2px 5px 5px #a5aeb6;
}


.homeButtonsStyle:hover, .calcButtonStyle:hover {
    background-color:  #7b7771;
    transform: scale(1.1);
}




em {
    font-style: italic;
}

.flash {
    background-color: rgba(204, 0, 0, 0.7);
    text-align: center;
    padding: 1rem;
    border-radius: 20px;
    max-width: 80%;
    }
#alert {
    margin-top: 0.25rem;
}

/* global nav and footer styles*/
nav, footer {
    background-color: #ccc6c2ee;
    padding: 0.5rem 0 0.5rem 0;
}

nav li {
    list-style: none;
    margin-bottom: 0.25rem;


}

nav a {
    text-decoration: none;
    font-weight: 500;
    color: #3a3938;

}

nav li {
     transition: transform 0.2s;
}

nav li:hover {
    transform: scale(1.2);
}

nav a:hover {
    color: #7b7771;

}

nav {
    position: fixed;
    width: 100%;
    top: 0px;
}

footer {
    position: fixed;
    width: 100%;

    bottom: 0px;
}
/*mobile nav styles */

.mobileNavToggle {
    background: transparent;
    border: none;
}

.mobileNavToggleImg, .mobileButtonDiv, .mobileNavToggle{
    border-radius: 50%;
}

.navDiv {
    display: inline;
}





/* media queries */

@media screen and (max-width: 1299px) {
    .pcNav {
        display: none;
    }
}

@media screen and (min-width: 1300px) {


    .header{
         display: flex;
         gap: 1rem;
    }
   .flexItem {
        flex: 1 1 0px;
    }

    .mobileNavToggle, .mobileNav {
    display: none;
}


 .pcNav ul{
    display: flex;
    justify-content: flex-start;


    }

    .pcNav li {
        margin-right: 2rem;
    }

     .displayResults {
        display: flex;
        justify-content: center;
        gap: 5rem;

    }



}

/* end media queries */


/* calculator form styles */


.form {
    margin-bottom: 1rem;
}
.calcInput {
    margin-top: 1rem;
    padding: 0.25rem;
}

.calcInput input {
    border-radius: 160rem;
    border: 0.1rem solid #ccc;
    max-width: 6rem;
    padding: 0.25rem;
    text-indent: .25rem;
}



.calcInput input:hover, .calcInput select:hover, button:hover {
    cursor: pointer;
}

.calcInput select {
    border-radius: 160rem;
    padding: 0.1rem;
    text-indent: .25rem;
}

.calcButtons {
    display: flex;
    justify-content: center;
    gap: 1rem;
    margin-top: 1rem;
}

/* calculator output styles */
.calcOutput li {
    list-style: none;
    padding: 0.1rem;
    font-weight: 500;
}

.calcOutput {
    margin-top: 3rem;
    margin-bottom: 1rem;
}

.calcOutput hr {
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;
}

.chartDiv {
    margin-top: -0.25 rem;
}
.chart {
    width: 80%;
    box-shadow: 10px 5px 5px #a5aeb6 ;
}
.horizontalRuleDiv {
    padding: 1rem 0rem 1rem 0rem;
}

.displayResults {
    margin-top: 2rem;
}

#results {
    margin-top: 4rem;
}

